--- a/android/PmkEventApp/app/src/main/res/values/colors.xml
+++ b/android/PmkEventApp/app/src/main/res/values/colors.xml
@@ -2,11 +2,15 @@
 <resources>
     <color name="colorFont">#FFFFFF</color>
     <color name="colorPrimary">#141a21</color>
-    <color name="colorPrimaryWhite">#f4f4f4</color>
+    <color name="colorPrimaryWhite">#F4F4F4</color>
 
-    <color name="colorAccent">#0091d0</color>
+    <color name="colorAccent">#5395B4</color>
 
     <color name="colorBackgroundPrimary">#FFFFFF</color>
     <color name="colorBackgroundSecondary">#f4f4f4</color>
+
+
+    <color name="colorFontMainPage">#111111</color>
+
 
 </resources>
