--- a/android/PmkEventApp/app/src/main/res/layout/fgmt_main_window.xml
+++ b/android/PmkEventApp/app/src/main/res/layout/fgmt_main_window.xml
@@ -9,59 +9,58 @@
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType = "centerCrop"
-         android:src="@drawable/main_background" />
+         android:src="@drawable/kosciol_jasne_wnetrze" />
 
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
-         android:gravity="bottom"
+         android:gravity="top"
          >
 
-          <TextView
-              android:id="@+id/textView1"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center_horizontal"
-              android:paddingHorizontal="20pt"
-              android:text="Wir kommen und reinigen Ihr Auto."
-              android:textAlignment="center"
-              android:textColor="@color/colorFont"
-              android:paddingBottom="10pt"
-              android:textStyle="bold"
-              android:textSize="30sp" />
 
           <TextView
-              android:id="@+id/textView1"
+              android:id="@+id/textViewHeader"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:textColor="@color/colorFont"
               android:layout_gravity="center_horizontal"
+              android:fontFamily="serif"
+              android:paddingTop="10pt"
+              android:text="DUSZPASTERSTWO POLSKOJĘZYCZNE"
               android:textAlignment="center"
-              android:paddingHorizontal="20pt"
-              android:text="Kein Strom- oder Wasseranschluss nötig: Der Cleaner bringt alles mit, was für die Autowäsche notwendig ist." />
+              android:textColor="@color/colorFontMainPage"
+              android:textSize="24sp"
+              android:textStyle="bold" />
+
           <TextView
-              android:id="@+id/textView1"
+              android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:textColor="@color/colorFont"
-              android:textAlignment="center"
               android:layout_gravity="center_horizontal"
-              android:paddingHorizontal="20pt"
-              android:text="Keine Kratzer: Wir garantieren, dass unsere Reinigungsmethode lackschonend ist." />
+              android:fontFamily="serif"
+              android:padding="10pt"
+              android:text="Wszystkie Msze Święte, Nabożeństwa polskojęzyczne w pobliżu."
+              android:textAlignment="center"
+              android:layout_below="@+id/textViewHeader"
+              android:textColor="@color/colorFontMainPage"
+              android:textSize="18sp"
+              android:textStyle="bold" />
+
+
           <Button
-              android:id="@+id/newOrderBtn"
+              android:id="@+id/btnRefreshPosition"
               style="@style/Widget.AppCompat.Button.Colored"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:layout_below="@+id/textView2"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="10pt"
               android:layout_marginBottom="40pt"
-              android:textSize="20sp"
               android:paddingLeft="10pt"
               android:paddingRight="10pt"
-              android:layout_below="@+id/textView1"
-              android:text="Autoreinigung buchen" />
+              android:text="Aktualizuj Pozycję"
+              android:textColorLink="@color/design_default_color_primary"
+              android:textSize="20sp" />
 
      </LinearLayout>
 
