--- a/android/PmkEventApp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android/PmkEventApp/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,43 +4,43 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_main"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/nav_main" />
 
         <item
-            android:id="@+id/nav_new_order"
+            android:id="@+id/nav_nabozenstwa"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/nav_nabozenstwa" />
 
         <item
-            android:id="@+id/nav_installed_base"
+            android:id="@+id/nav_spowiedz"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/nav_spowiedz" />
 
         <item
-            android:id="@+id/nav_orders"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/nav_nabozenstwa" />
+            android:id="@+id/nav_terminy"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/nav_terminy" />
 
-
+        <item
+            android:id="@+id/nav_rekolekcje"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/nav_rekolekcje" />
     </group>
+
 
     <item >
         <menu>
             <item
                 android:id="@+id/nav_account"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Mein Konto" />
+                android:title="Polskie Misje" />
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Einstellungen" />
-            <item
-                android:id="@+id/nav_tnc"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Impressum" />
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Weiterempfehlen" />
+                android:title="Wyślij apkę" />
         </menu>
     </item>
 
